# logic

./: build-docs.sh  logic.cabal  readme.md
.github/workflows/: haskell.yml
docs/: Logic-Proof.html  doc-index.html  index.html  logic.haddock
src/Logic/: Problem.hs  Proof.hs  Rule.hs  UnificationProof.hs
src/Text/: Latex.hs
