cabal-version:      3.6
name:               logic
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: NONE

-- The package author(s).
author: Prashant Kumar, Iain Moncrief, Christopher Lin

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: moncrief@oregonstate.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

extra-doc-files: readme.md

library
    exposed-modules:
        Logic.Proof

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        mtl,
        containers

    hs-source-dirs:
        src
        src/Logic

    default-language:  GHC2021
